<resources>
    <string name="app_id" translatable="false">ca-app-pub-1475613019168586~2120488559</string>
    <string name="banner_ad_unit_id_main" translatable="false">ca-app-pub-1475613019168586/8301212155</string>
    <string name="banner_ad_unit_id_map" translatable="false">ca-app-pub-1475613019168586/9777945357</string>
    <string name="banner_ad_unit_id_map_interstitial" translatable="false">ca-app-pub-1475613019168586/4098011751</string>
    <string name="google_map_api_key" translatable="false">AIzaSyAoYJZLp7IFT4Mmd_Sp6qbsgLo2JJ8mdOY</string>
    <string name="privacy_policy_link" translatable="false">https://findmycarlocation.ucraft.me/</string>

    <string name="app_name">Find My Car Location</string>
    <string name="save_car_location_success">Car location has been saved</string>
    <string name="gsp_turning_on">GPS is turning on… Wait, please</string>
    <string name="no_internet">Internet is not available</string>
    <string name="no_location">GPS is turning on&#8230;Wait&#8230;</string>
    <string name="no_path">Couldn\'t build the route</string>
    <string name="car_is_found">Your car is found</string>
    <string name="you_should_save_car_location">You should park your car</string>
    <string name="distance">Distance: %1$s</string>
    <string name="duration">Duration: %1$s</string>
    <string name="screen_map">Map</string>
    <string name="dialog_title_save_car">Save car location?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_you_not_find_car">You haven\'t found your car yet</string>
    <string name="retry">Retry</string>
    <string name="version">Version %1$s</string>
    <string name="copyright" translatable="false">© by moggot, %1$d</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="found_car">I found my car</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Map</string>
    <string name="title_notifications">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="remove_ads">Remove ads</string>
    <string name="google_play_servicies_error">Google Play Services unavailable. This app will not work</string>

</resources>
